fix: closed trades timezone consistency (#454)

--- a/public/index.prod.html
+++ b/public/index.prod.html
@@ -62,7 +62,7 @@
     ></script>
 
     <script
-      src="https://unpkg.com/moment@2.14.1/min/moment.min.js"
+      src="https://unpkg.com/moment@2.14.1/min/moment-with-locales.min.js"
       crossorigin
     ></script>
     <script
