fix: non-active exchange symbols (#478)

--- a/public/index.html
+++ b/public/index.html
@@ -120,7 +120,7 @@
         Pagination
       } = ReactBootstrap;
 
-      const { Typeahead } = ReactBootstrapTypeahead;
+      const { Typeahead, Highlighter } = ReactBootstrapTypeahead;
     </script>
 
     <script type="text/babel" src="./js/Config.js"></script>
