--- a/public/index.prod.html
+++ b/public/index.prod.html
@@ -105,7 +105,7 @@
         Pagination
       } = ReactBootstrap;
 
-      const { Typeahead } = ReactBootstrapTypeahead;
+      const { Typeahead, Highlighter } = ReactBootstrapTypeahead;
     </script>
 
     <script src="./dist/App.min.js"></script>
