--- a/public/index.prod.html
+++ b/public/index.prod.html
@@ -9,14 +9,12 @@
     <link
       rel="manifest"
       href="/site.webmanifest"
-      crossorigin="use-credentials"
-    />
+      crossorigin="use-credentials" />
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#191f2c" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta
       name="apple-mobile-web-app-status-bar-style"
-      content="black-translucent"
-    />
+      content="black-translucent" />
     <meta name="apple-mobile-web-app-title" content="Binance Trading Bot" />
     <meta name="application-name" content="Binance Trading Bot" />
     <meta name="msapplication-TileColor" content="#191f2c" />
@@ -25,62 +23,56 @@
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
       integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
-      crossorigin="anonymous"
-    />
+      crossorigin="anonymous" />
     <link
       rel="stylesheet"
       href="./css/fontawesome/all.min.css"
-      crossorigin="anonymous"
-    />
+      crossorigin="anonymous" />
     <link
       rel="stylesheet"
-      href="https://unpkg.com/react-bootstrap-typeahead@5.1.4/css/Typeahead.min.css"
-    />
+      href="https://unpkg.com/react-bootstrap-typeahead@5.1.4/css/Typeahead.min.css" />
     <link rel="stylesheet" href="https://unpkg.com/notyf@3.9.0/notyf.min.css" />
 
     <link rel="stylesheet" href="./dist/App.min.css" />
     <meta
       name="viewport"
-      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
-    />
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   </head>
   <body class="dark-theme dark-mode">
     <div id="app" class="app"></div>
 
     <script
       src="https://unpkg.com/react@17/umd/react.production.min.js"
-      crossorigin
-    ></script>
+      crossorigin></script>
     <script
       src="https://unpkg.com/react-dom@17/umd/react-dom.production.min.js"
-      crossorigin
-    ></script>
+      crossorigin></script>
 
     <script
       src="https://unpkg.com/react-bootstrap@1.5.2/dist/react-bootstrap.min.js"
-      crossorigin
-    ></script>
+      crossorigin></script>
 
     <script
       src="https://unpkg.com/moment@2.14.1/min/moment-with-locales.min.js"
-      crossorigin
-    ></script>
+      crossorigin></script>
     <script
       src="https://unpkg.com/lodash@4.17.20/lodash.min.js"
-      crossorigin
-    ></script>
+      crossorigin></script>
     <script
       src="https://unpkg.com/axios/dist/axios.min.js"
-      crossorigin
-    ></script>
+      crossorigin></script>
     <script
       src="https://unpkg.com/react-bootstrap-typeahead@5.1.4/dist/react-bootstrap-typeahead.min.js"
-      crossorigin
-    ></script>
+      crossorigin></script>
     <script
       src="https://unpkg.com/notyf@3.9.0/notyf.min.js"
-      crossorigin
-    ></script>
+      crossorigin></script>
+
+    <!-- prop-types is required for react-dropzone package. -->
+    <script
+      src="https://unpkg.com/prop-types@15.6/prop-types.min.js"
+      crossorigin></script>
+    <script src="https://unpkg.com/react-dropzone@14.2.2" crossorigin></script>
 
     <script>
       const { useState, useRef, useEffect } = React;
@@ -106,6 +98,8 @@
       } = ReactBootstrap;
 
       const { Typeahead, Highlighter } = ReactBootstrapTypeahead;
+
+      const { default: Dropzone } = reactDropzone;
     </script>
 
     <script src="./dist/App.min.js"></script>
