feat: show error when use wrong API key (#544)

--- a/public/index.html
+++ b/public/index.html
@@ -180,6 +180,7 @@
     <script type="text/babel" src="./js/LockIcon.js"></script>
     <script type="text/babel" src="./js/UnlockIcon.js"></script>
     <script type="text/babel" src="./js/Header.js"></script>
+    <script type="text/babel" src="./js/APIError.js"></script>
     <script type="text/babel" src="./js/LockScreen.js"></script>
     <script type="text/babel" src="./js/AppSorting.js"></script>
     <script type="text/babel" src="./js/AppLoading.js"></script>
