feat: next buy grid calculator (#554)

--- a/public/index.html
+++ b/public/index.html
@@ -131,6 +131,7 @@
     <script type="text/babel" src="./js/SymbolManualTradeIcon.js"></script>
     <script type="text/babel" src="./js/CoinWrapperAction.js"></script>
     <script type="text/babel" src="./js/CoinWrapperBalance.js"></script>
+    <script type="text/babel" src="./js/SymbolGridCalculator.js"></script>
     <script type="text/babel" src="./js/SymbolGridTradeArchiveIcon.js"></script>
     <script type="text/babel" src="./js/SymbolCancelIcon.js"></script>
     <script type="text/babel" src="./js/SymbolEnableActionIcon.js"></script>
